--- a/WebContent/WEB-INF/zul/schema/parser/list.zul
+++ b/WebContent/WEB-INF/zul/schema/parser/list.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for Jaeksoft OpenSearchServer
-	Copyright (C) 2011 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2011 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of Jaeksoft OpenSearchServer.
 	Jaeksoft OpenSearchServer is free software: you can
@@ -14,36 +14,40 @@
 	copy of the GNU General Public License along with Jaeksoft OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<panel title="List of existing renderer" border="normal">
+<panel title="List of existing parser" border="normal">
 	<panelchildren>
-		<listbox model="@{renderer.renderers}" mold="paging"
-			selectedItem="@{renderer.selectedRenderer}" pageSize="10">
+		<listbox model="@{parser.parserSet}" mold="paging"
+			selectedItem="@{parser.selectedParser}" pageSize="15">
 			<auxhead>
 				<auxheader colspan="3">
-					<button label="New renderer..."
-						onClick="renderer.onNew()" />
+				<listbox mold="select"
+						selectedItem="@{parser.selectedParserType}"
+						model="@{parser.parserTypeList}">
+						<listitem self="@{each=parserType}"
+							label="@{parserType.name}" />
+					</listbox>
+						<button label="New parser"
+						onClick="parser.onNew()" />
 				</auxheader>
 			</auxhead>
 			<listhead>
 				<listheader label="Name" />
-				<listheader label="Request" />
+				<listheader label="Type" />
 				<listheader label="Action" width="200px" />
 			</listhead>
 			<listitem self="@{each=item}">
-				<custom-attributes rendererItem="@{item}" />
-				<listcell label="@{item.name}"
-					onDoubleClick="renderer.doEdit(self)" />
-				<listcell label="@{item.requestName}"
-					onDoubleClick="renderer.doEdit(self)" />
+				<custom-attributes parserItem="@{item}" />
+				<listcell label="@{item.parserName}"
+					onDoubleClick="parser.doEdit(self)" />
+				<listcell label="@{item.parserType.name}"
+					onDoubleClick="parser.doEdit(self)" />
 				<listcell>
 					<hbox align="center">
-						<button label="View" href="@{item.apiUrl}"
-							target="_blank" />
 						<button label="Edit"
-							onClick="renderer.doEdit(self)" />
+							onClick="parser.doEdit(self)" />
 						<space width="10px" />
 						<button label="Delete"
-							onClick="renderer.doDelete(self)" />
+							onClick="parser.doDelete(self)" />
 					</hbox>
 				</listcell>
 			</listitem>
