--- a/WebContent/WEB-INF/zul/runtime/index.zul
+++ b/WebContent/WEB-INF/zul/runtime/index.zul
@@ -34,6 +34,8 @@
 				selected="@{runtime.instanceNotValid}" />
 			<tab id="tabRuntimeLogs" label="Logs"
 				visible="@{runtime.adminOrMonitoringOrNoUser}" />
+				<tab id="tabRuntimeOpenSearch" label="OpenSearch"
+				visible="@{runtime.adminOrMonitoringOrNoUser}" />
 		</tabs>
 		<tabpanels>
 			<tabpanel>
@@ -56,6 +58,9 @@
 			</tabpanel>
 			<tabpanel>
 				<include src="WEB-INF/zul/runtime/logs.zul" />
+			</tabpanel>
+			<tabpanel>
+				<include src="WEB-INF/zul/runtime/opensearch.zul" />
 			</tabpanel>
 		</tabpanels>
 	</tabbox>
