New feature 3386107:OpenSearch Standard API

--- a/WebContent/WEB-INF/zul/runtime/opensearch.zul
+++ b/WebContent/WEB-INF/zul/runtime/opensearch.zul
@@ -30,7 +30,7 @@
 			</row>
 			<row >
 			  <label value="" />
-				<button tooltiptext="View" label="View" onClick="opensearch.onViewOpenSearch();" />
+				<button tooltiptext="View" id="openSearchview" label="View" 	href="@{opensearch.requestApiCall}" />
 				<space />
 			</row>
 			
